{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 49,
  "lineage": "2f57f637-7fcd-b05e-eb0a-97d14be2fb36",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-026e4db50d6bf8c44",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-227-140-151.compute-1.amazonaws.com",
            "public_ip": "3.227.140.151",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0ce9f29aa934b50f9",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-211-168-52.compute-1.amazonaws.com",
            "public_ip": "54.211.168.52",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "first_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04d29b6f966df1537",
            "arn": "arn:aws:ec2:us-east-1:343285135255:instance/i-07e9430ff795789c8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07e9430ff795789c8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01e14031a47c9c944",
            "private_dns": "ip-172-31-90-145.ec2.internal",
            "private_ip": "172.31.90.145",
            "public_dns": "ec2-54-167-34-251.compute-1.amazonaws.com",
            "public_ip": "54.167.34.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04d2f27bea6afa225",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1fae073e",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-29b88714"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343285135255:internet-gateway/igw-03e460d7f54f23ef2",
            "id": "igw-03e460d7f54f23ef2",
            "owner_id": "343285135255",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-001c976068179f591"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-026e4db50d6bf8c44",
            "id": "nat-00747c9fb306d1f8c",
            "network_interface_id": "eni-0b5b6f5213d1cfb4a",
            "private_ip": "10.0.2.14",
            "public_ip": "3.227.140.151",
            "subnet_id": "subnet-0ae998d6d950c6799",
            "tags": {
              "Name": "NAT-gateway public 1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.terraform_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce9f29aa934b50f9",
            "id": "nat-05204a21b6a00234e",
            "network_interface_id": "eni-075b2f32fc770c090",
            "private_ip": "10.0.3.206",
            "public_ip": "54.211.168.52",
            "subnet_id": "subnet-0f2c7e602e01c9c43",
            "tags": {
              "Name": "NAT-gateway public 2"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.terraform_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0816ecd3037a35fe4",
            "owner_id": "343285135255",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00747c9fb306d1f8c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt 1"
            },
            "vpc_id": "vpc-001c976068179f591"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-021643b2af9e9c065",
            "owner_id": "343285135255",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05204a21b6a00234e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt 2"
            },
            "vpc_id": "vpc-001c976068179f591"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e759f7fd76b8aef4",
            "owner_id": "343285135255",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03e460d7f54f23ef2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public rt"
            },
            "vpc_id": "vpc-001c976068179f591"
          },
          "dependencies": [
            "aws_internet_gateway.terra_igw",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b8b6b7a3986a229",
            "route_table_id": "rtb-0816ecd3037a35fe4",
            "subnet_id": "subnet-034c7f3012855db82"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06179dbec8db3fd3c",
            "route_table_id": "rtb-021643b2af9e9c065",
            "subnet_id": "subnet-0b6871961ad1fff88"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019fcb7b4915d646d",
            "route_table_id": "rtb-0e759f7fd76b8aef4",
            "subnet_id": "subnet-0ae998d6d950c6799"
          },
          "dependencies": [
            "aws_internet_gateway.terra_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0536b7aee41bd2e2b",
            "route_table_id": "rtb-0e759f7fd76b8aef4",
            "subnet_id": "subnet-0f2c7e602e01c9c43"
          },
          "dependencies": [
            "aws_internet_gateway.terra_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343285135255:security-group/sg-0f68e9a4863a984b9",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f68e9a4863a984b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "http from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "343285135255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-001c976068179f591"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343285135255:subnet/subnet-034c7f3012855db82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-034c7f3012855db82",
            "map_public_ip_on_launch": false,
            "owner_id": "343285135255",
            "tags": {
              "Name": "Private-1"
            },
            "vpc_id": "vpc-001c976068179f591"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343285135255:subnet/subnet-0b6871961ad1fff88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b6871961ad1fff88",
            "map_public_ip_on_launch": false,
            "owner_id": "343285135255",
            "tags": {
              "Name": "Private-2"
            },
            "vpc_id": "vpc-001c976068179f591"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343285135255:subnet/subnet-0ae998d6d950c6799",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0ae998d6d950c6799",
            "map_public_ip_on_launch": false,
            "owner_id": "343285135255",
            "tags": {
              "Name": "Public-1"
            },
            "vpc_id": "vpc-001c976068179f591"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343285135255:subnet/subnet-0f2c7e602e01c9c43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0f2c7e602e01c9c43",
            "map_public_ip_on_launch": false,
            "owner_id": "343285135255",
            "tags": {
              "Name": "Public-2"
            },
            "vpc_id": "vpc-001c976068179f591"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343285135255:vpc/vpc-001c976068179f591",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d5d9efbf0b790559",
            "default_route_table_id": "rtb-00f9eb81e20668944",
            "default_security_group_id": "sg-0179be12ace8949fe",
            "dhcp_options_id": "dopt-3f5bc345",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-001c976068179f591",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00f9eb81e20668944",
            "owner_id": "343285135255",
            "tags": {
              "Name": "terraformvpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}